test/spec_vectors/ref/fail/module_7.wat
(module (func $func-result-invalid (result (ref 1))))